[gd_scene load_steps=2 format=2]

[ext_resource path="res://Controles.gd" type="Script" id=1]

[node name="Controles" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="DireitaMostrar" type="LineEdit" parent="."]
margin_left = 540.0
margin_top = 150.0
margin_right = 710.0
margin_bottom = 174.0

[node name="EsquerdaMostrar" type="LineEdit" parent="."]
margin_left = 110.0
margin_top = 150.0
margin_right = 290.0
margin_bottom = 174.0

[node name="PuloMostrar" type="LineEdit" parent="."]
margin_left = 330.0
margin_top = 150.0
margin_right = 500.0
margin_bottom = 174.0

[node name="Direita" type="Label" parent="."]
margin_left = 540.0
margin_top = 130.0
margin_right = 703.0
margin_bottom = 144.0
text = "Aperte o Botão de Direita"

[node name="Esquerda" type="Label" parent="."]
margin_left = 110.0
margin_top = 130.0
margin_right = 288.0
margin_bottom = 144.0
text = "Aperte o Botão de Esquerda"

[node name="Pulo" type="Label" parent="."]
margin_left = 340.0
margin_top = 130.0
margin_right = 518.0
margin_bottom = 144.0
text = "Aperte o Botão de Pulo"

[node name="Jogar" type="Button" parent="."]
margin_left = 350.0
margin_top = 200.0
margin_right = 528.0
margin_bottom = 220.0
text = "Jogar"
